--- a/xamarinContact/xamarinContact.csproj
+++ b/xamarinContact/xamarinContact.csproj
@@ -55,6 +55,8 @@
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -93,12 +95,14 @@
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\ContactsController.cs" />
+    <Compile Include="Exceptions\ContactNotFoundException.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Contact.cs" />
-    <Compile Include="Models\xamarinContactContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Data\xamarinContactModel.cs" />
+    <Compile Include="Services\ContactsStore.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
