--- a/APP/ContactApp/ContactApp/ContactApp.csproj
+++ b/APP/ContactApp/ContactApp/ContactApp.csproj
@@ -41,6 +41,7 @@
     <Compile Include="ContactList.xaml.cs">
       <DependentUpon>ContactList.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ICellPhone.cs" />
     <Compile Include="Models\Contact.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
