--- a/APP/ContactApp/ContactApp.Android/Properties/AndroidManifest.xml
+++ b/APP/ContactApp/ContactApp.Android/Properties/AndroidManifest.xml
@@ -3,5 +3,6 @@
 	<uses-sdk android:minSdkVersion="15" />
 	<uses-permission android:name="android.permission.CALL_PHONE" />
 	<uses-permission android:name="android.permission.WRITE_SMS" />
+	<uses-permission android:name="android.permission.CAMERA" />
 	<application android:label="ContactApp.Android"></application>
 </manifest>
