--- a/APP/ContactApp/ContactApp.Android/Properties/AndroidManifest.xml
+++ b/APP/ContactApp/ContactApp.Android/Properties/AndroidManifest.xml
@@ -4,5 +4,6 @@
 	<uses-permission android:name="android.permission.CALL_PHONE" />
 	<uses-permission android:name="android.permission.WRITE_SMS" />
 	<uses-permission android:name="android.permission.CAMERA" />
+	<uses-permission android:name="android.permission.INTERNET" />
 	<application android:label="ContactApp.Android"></application>
 </manifest>
